--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -172,18 +172,18 @@
     <string name="event_edit">Modificaţi evenimentul</string>
     <string name="event_full_date_format">dd/MM/yyyy</string>
     <string name="event_hide_more">Ascundeţi</string>
-    <string name="event_info_descrip">Descriere\u0009\u0009\u0009</string>
-    <string name="event_info_end">Sfârşit\u0009\u0009\u0009</string>
+    <string name="event_info_descrip">Descriere</string>
+    <string name="event_info_end">Sfârşit</string>
     <string name="event_info_from">De la</string>
     <string name="event_info_jump_to_email">Deschideți e-mailul</string>
     <string name="event_info_reminders_label">Mementouri</string>
     <string name="event_info_reminders_label_1">Memento</string>
     <string name="event_info_reminders_label_more">Memento %d</string>
-    <string name="event_info_repeat">Repetare\u0009</string>
+    <string name="event_info_repeat">Repetare</string>
     <string name="event_info_title">Vizualizaţi evenimentul</string>
     <string name="event_info_title_invite">Invitaţie la întâlnire</string>
-    <string name="event_info_when">Când\u0009\u0009</string>
-    <string name="event_info_where">Unde\u0009</string>
+    <string name="event_info_when">Când</string>
+    <string name="event_info_where">Unde</string>
   <string name="event_lunar_month">Lună</string>
     <string name="event_show_more">Mai multe opţiuni</string>
     <string name="event_title">Titlu</string>
