--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="account_login_title">Cont</string>
+    <string name="a_week_share_rank">Evaluări săptămânale</string>
     <string name="action_mode_deselect_all">Deselectaţi tot</string>
     <string name="action_mode_select_all">Selectaţi tot</string>
     <string name="activity_parse_video_title">Lipiți link-ul videoclipului</string>
@@ -98,6 +98,7 @@
     <string name="claim_video_success">Raportat cu succes</string>
     <string name="claim_video_unlogin">Conectați-vă pentru a raporta videoclipuri</string>
     <string name="clean_hint">Apăsaţi pentru a elibera spațiu</string>
+    <string name="click_to_refresh">Atingeți aici pentru a actualiza</string>
     <string name="click_to_switch_volume">Apăsați aici pentru a comuta între memoria internă și cardul SD</string>
     <string name="click_to_switch_volume_pad">Atingeți pentru a comuta între memoria internă și cardul SD</string>
     <string name="comment_delete_message">Comentariul va fi șters definitiv.</string>
@@ -201,7 +202,6 @@
     <string name="file_loading">Încărcare…</string>
     <string name="file_name_invalid">"Numele fișierelor nu pot conține următoarele caractere: /\\:*?&lt;&gt;"</string>
     <string name="file_not_exist">Nu există</string>
-    <string name="flow_setting">Setări</string>
     <string name="folder_name_empty">Numele dosarului nu poate fi gol</string>
     <string name="folder_name_illegal">Nume dosar greşit</string>
     <string name="follow_fail">"Nu s-a putut urmări, încercați din nou mai târziu"</string>
@@ -233,11 +233,12 @@
     <string name="homepage_tab_category">Categorii</string>
     <string name="homepage_tab_file_view">Stocare</string>
     <string name="homepage_tab_recent">Recente</string>
-    <string name="hot_app">Aplicații populare</string>
     <string name="hot_comments">Comentarii populare</string>
     <string name="hot_sticker">Stickere</string>
+    <string name="hot_topic_str">Subiecte populare</string>
     <string name="hot_video">Videoclipuri</string>
     <string name="hot_video_load_more">Mai multe &gt;</string>
+    <string name="hot_video_title">Videoclipuri populare</string>
     <string name="hottest_sticker_str">Popular</string>
     <string name="if_cancel">Renunțați?</string>
     <string name="image_loading_error">"Nu s-a putut încărca imaginea"</string>
@@ -271,7 +272,6 @@
     <string name="login_expired">Sesiunea a expirat; conectați-vă din nou</string>
     <string name="login_failed_tip">"Nu s-a putut conecta; încercați din nou mai târziu"</string>
     <string name="login_success_tip">Conectat cu succes</string>
-    <string name="login_tip">Partajați videoclipuri cu momente inedite pentru a câștiga premii</string>
     <string name="make_private">Ascundeți</string>
     <string name="make_private_msg_1">Ascundeți acest fișier?</string>
     <string name="make_private_msg_2">Ascundeți aceste fișiere?</string>
@@ -326,6 +326,8 @@
     <string name="no_apk">Apăsați pentru a vedea cele mai populare aplicații.</string>
     <string name="no_app_tags">Gol</string>
     <string name="no_comment">Niciun comentariu</string>
+    <string name="no_content">Deschideți din nou Exploratorul de fișiere pentru a vedea videoclipurile populare</string>
+    <string name="no_daren_tip">Nimic aici deocamdată</string>
     <string name="no_downloaded_sticker_tip">"Nu s-au putut găsi stickerele descărcate. Verificați stickerele partajate de către fanii Mi."</string>
     <string name="no_enough_storage_indication">Stocarea dispozitivului este plină</string>
     <string name="no_enough_storage_title">Spaţiu insuficient</string>
@@ -358,7 +360,6 @@
     <string name="oauth_failed_tip">"Nu s-a putut finaliza autorizarea"</string>
     <string name="one_account_bind_needed">Adăugați cel puțin un cont</string>
     <string name="online_not_support">Nu se poate vizualiza acest fișier în acest moment.</string>
-    <string name="only_wifi">Descărcați când sunteți conectat la Wi-Fi</string>
     <string name="open_app">Deschideți</string>
     <string name="open_private_folder">Eliberați pentru a vedea dosarele ascunse</string>
     <string name="operation_add_fav">Adăugare la favorite…</string>
@@ -408,13 +409,11 @@
     <string name="partial_cancel_successful">"Nu s-au putut elimina unele fișiere. Restul au fost mutate în %s."</string>
     <string name="partial_delete_failure">"Nu s-au putut șterge unele fișiere; reîncercați"</string>
     <string name="partial_encrypt_success">"Nu s-au putut ascunde unele fișiere; reîncercați"</string>
-    <string name="partial_repair_done">Au fost restaurate câteva fișiere</string>
     <string name="petabyteShort">PB</string>
     <string name="phone">Telefon</string>
     <string name="phone_bind_skip">Omiteți</string>
     <string name="phone_bind_tip">Adăugați numărul de telefon pentru a participa la evaluări și pentru a câștiga premii</string>
     <string name="phone_bind_title">Adăugați numărul de telefon</string>
-    <string name="phone_btn_str">Telefon</string>
     <string name="phone_code_err">Numărul de telefon sau codul de verificare sunt incorecte</string>
     <string name="phone_code_et_hint">Introduceți codul de verificare</string>
     <string name="phone_get_code_tip">Prea multe încercări de obținere a codului astăzi</string>
@@ -468,8 +467,6 @@
     <string name="rename_failed">Nu se poate redenumi %1$s</string>
     <string name="repair_done">Restaurate</string>
     <string name="repair_error">"Nu s-au putut restaura"</string>
-    <string name="repair_error_no_media">"Nu s-a putut restaura, selectați cel puțin un fișier media."</string>
-    <string name="repair_error_no_order">"Nu s-a putut restaura, ștergeți sau decriptați %s și reîncercați"</string>
     <string name="repair_file">Restaurați fișierele criptate</string>
     <string name="reply_success">Comentariul a fost postat.</string>
     <string name="report_abuse">Abuz</string>
@@ -528,6 +525,7 @@
     <string name="setting_message_notify">Notificări</string>
     <string name="setting_shortcut">Adăugați o scurtătură pe ecranul principal</string>
   <string name="share_from_youliao">(De la #有料# @有料Videoclip)丨</string>
+    <string name="share_rank_card_tip">Partajați evaluările</string>
     <string name="share_success">Partajat cu succes</string>
     <string name="share_tip_1">Mulțumesc pentru partajare; urmăriți-mă pentru a vedea mai multe videoclipuri</string>
     <string name="share_tip_2">Mulțumesc pentru partajare; urmăriți-mă pentru a vedea mai multe videoclipuri</string>
@@ -563,6 +561,7 @@
     <string name="start_server">Porniţi serverul</string>
     <string name="stay_awake_summary">Ecranul va fi activ permanent atunci când utilizaţi FTP</string>
     <string name="stay_awake_title">Mențineți ecranul activ</string>
+    <string name="sticker_btn_str_explore_tab">Explorați o mulțime de lucruri distractive!</string>
     <string name="stop_server">Opriţi serverul</string>
     <string name="storage_cloned_app">Stocare pentru aplicațiile clonate</string>
     <string name="storage_info_detail">Disponibil: %1$s Total: %2$s</string>
@@ -577,6 +576,7 @@
     <string name="tab_claim">Raportare</string>
     <string name="tab_common_app">Aplicații și dosare</string>
     <string name="tab_discover">Descoperiți</string>
+    <string name="tab_explore">Descoperiți</string>
     <string name="tab_follow">Urmărire</string>
     <string name="tab_homepage">Acasă</string>
     <string name="tab_hottest_video">Populare</string>
@@ -597,6 +597,8 @@
     <string name="title_select_volume">Selectaţi dosarul</string>
     <string name="toast_file_not_can_read">Nu a fost găsită nicio aplicaţie pt. a finaliza această acţiune</string>
     <string name="tools">INSTRUMENTE</string>
+    <string name="top_mark">TOP</string>
+    <string name="top_videos">Partajați evaluările</string>
     <string name="topic_follow">Urmăriți</string>
     <string name="topic_followed">Urmărit</string>
     <string name="topic_message">&lt;font color=#fc7050&gt;%1$s: &lt;/font&gt;%2$s</string>
@@ -635,6 +637,7 @@
     <string name="upload_notification_success">Încărcat cu succces</string>
     <string name="upload_notification_success_content">"Videoclipul trebuie revizuit înainte de a fi partajat altor persoane"</string>
     <string name="upload_notification_title">Se încarcă videoclipul</string>
+    <string name="upload_popup">Încărcați videoclipuri pentru a câștiga premii</string>
     <string name="upload_user_photo">Încărcați</string>
     <string name="upload_video_failed">"Nu s-a putut încărca"</string>
     <string name="upload_video_failed_external_progress">"Nu s-a putut încărca, înceracți cu un alt videoclip"</string>
@@ -743,7 +746,9 @@
     <string name="video_upload_title">Selectați videoclipul</string>
     <string name="video_upload_wechat_hint">Încărcați videoclipuri WeChat pentru a câștiga mai mulți fani.</string>
     <string name="video_uploaded">Încărcat</string>
+    <string name="view_master_rank">Vedeți topul Youliao</string>
     <string name="view_more_sticker">Vedeți mai multe stickere</string>
+    <string name="view_top_rank">Vedeți evaluările</string>
     <string name="wb_btn_bind">Weibo</string>
     <string name="wechat_btn_bind">WeChat</string>
     <string name="wechat_btn_str">WeChat</string>
@@ -773,5 +778,6 @@ Urmăriți împreună cu 170 de milioane de fani Mi."</string>
     <string name="youliao_dialog_msg">"Videoclipuri Populare a fost înlocuită cu \"Youliao\" 
 aplicație menită să vă aducă mai multă distracție!"</string>
     <string name="youliao_dialog_title">Nu vă interesează videoclipurile?</string>
+    <string name="youliao_master_rank">Topul Youliao</string>
     <string name="zero">0</string>
 </resources>
