--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="about_smart_sms_title">Partener mesagerie inteligentă</string>
     <string name="action_firewall_setting">Listă blocări</string>
     <string name="activity_not_found">Nu a fost găsită nicio aplicaţie pentru a îndeplini această acţiune</string>
     <string name="activity_not_found_uri">Nu a fost găsită nicio aplicaţie pentru a îndeplini această acţiune</string>
@@ -377,6 +378,7 @@
     <string name="open_url_with_web">Deschideţi acest URL în Browser?</string>
     <string name="over_max_mms_size">MMS prea mare.</string>
     <string name="overwrite_edited_content">Conținutul editat va fi suprascris</string>
+    <string name="partner_companies">Teddy Mobile, Yulore Tech.</string>
     <string name="phrase_confirm_delete_message">Acest răspuns va fi şters.</string>
     <string name="phrase_empty">Niciun răspuns</string>
     <string name="phrase_from">De la %1s</string>
@@ -422,6 +424,7 @@
     <string name="pref_time_auto_group_disabled_summary">Nu este acceptat în dimensiunea actuală a fontului</string>
     <string name="pref_time_auto_group_summary">Grupaţi mesajele după oră</string>
     <string name="pref_time_auto_group_title">Grupare mesaje</string>
+    <string name="pref_title_about_smart_sms">Despre partenerul Mesagerie inteligentă</string>
     <string name="pref_title_allow_si_sl_push">Permiteţi mesaje WAP Push(SI/SL)</string>
     <string name="pref_title_card_format">Formatare card partajare</string>
     <string name="pref_title_delivery_reports">Rapoarte de livrare</string>
