--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -78,6 +78,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="antivirus_choose_engine_disable_toast">Nu se pot schimba definițiile în timp ce scanarea este în curs</string>
     <string name="antivirus_choose_engine_settings">Setări definiţii viruşi</string>
     <string name="antivirus_choose_engine_title">Definiţii</string>
+    <string name="antivirus_choose_engine_update_disable_toast">"Nu se pot modifica definițiile în timp ce rulează actualizarea"</string>
     <string name="antivirus_monitor_btn_text_clean_risk">Eliminați aplicațiile care prezintă riscuri</string>
     <string name="antivirus_monitor_btn_text_clean_virus">Eliminați viruși</string>
     <string name="antivirus_monitor_clean_tips">Elemente eliminate: %s</string>
@@ -265,6 +266,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="btn_text_goto_setup">Mergeți la Setări</string>
     <string name="btn_text_network_speed_detail">Conexiune</string>
     <string name="btn_text_open_now">Activați</string>
+    <string name="btn_text_optimize_extend_battery_time">Suplimentați %s</string>
     <string name="btn_text_optimize_manually">Optimizați manual</string>
     <string name="btn_text_optimize_now">Optimizați</string>
     <string name="btn_text_power_cleanup">Curăţare profundă</string>
@@ -371,7 +373,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="connecting">Conectare…</string>
     <string name="continue_install">Instalați</string>
     <string name="convenient_mode">Deblocați toate aplicațiile simultan</string>
-    <string name="convenient_summary">"Nu se solicită parola după ce a fost deblocată o aplicație"</string>
+    <string name="convenient_summary">Introduceți o dată parola pentru a debloca toate aplicațiile</string>
     <string name="correction_attention_dialog_message">Se modifică setările. Așteptați încheierea procesului și reîncercați.</string>
     <string name="cta_button_text_agree">OK</string>
     <string name="cta_button_text_cancel">Anulaţi</string>
@@ -729,7 +731,6 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="menu_item_notification_antispam_text_avail">Listă blocări</string>
     <string name="menu_item_notification_antispam_text_normal">Listă blocări</string>
     <string name="menu_item_notification_garbage_text">%s</string>
-    <string name="menu_item_notification_garbage_text_error">Eroare</string>
     <string name="menu_item_notification_power_text">Energie</string>
     <string name="menu_item_notification_title">Afişare meniu în panoul notificărilor</string>
     <string name="menu_item_settings_title">Setări</string>
@@ -759,6 +760,8 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="modifypassword">Modificați parola</string>
     <string name="monitor_requests_from_pc">Administrați instalarea aplicațiilor prin USB</string>
     <string name="month_report_month_report_switch">Se afişează raportul lunar</string>
+    <string name="msg_update_error_code_success">Finalizat</string>
+    <string name="msg_update_up">Ascundeți</string>
     <string name="network_assistant_upgraded_body">Atingeţi pentru a vizualiza detaliile.</string>
     <string name="network_assistant_upgraded_title">Actualizare finalizată</string>
     <string name="network_blocked_connected_open_wifi">Conectat la rețea publică</string>
@@ -1065,6 +1068,7 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="pref_title_declaration">Indicații importante</string>
     <string name="pref_title_diagnostics_show_float_notification">Notificări plutitoare</string>
     <string name="pref_title_lock_screen_memory_clean">Curăţare la blocarea ecranului</string>
+    <string name="pref_title_manual_check_virus_db_update">Căutați actualizări</string>
     <string name="pref_title_mobile_traffic">Afişaţi utilizarea datelor în perioada cât a fost blocat</string>
     <string name="pref_title_network_diagnostics">Verificare reţea</string>
     <string name="pref_title_over_traffic_limit_warning">La depășire</string>
@@ -1107,6 +1111,8 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="quick_optimize_no_issue_subtitle">Totul pare în regulă</string>
     <string name="quick_optimize_no_issue_title">"Nu s-au găsit probleme legate de acumulator"</string>
     <string name="quick_optimize_sub_summary_text">S-a prelungit durata de viață a acumulatorului cu %s</string>
+    <string name="quick_optimize_suggest_battery_consume_too_fast">Telefonul se descarcă rapid; rezolvați problema</string>
+    <string name="quick_optimize_suggest_battery_over_heat">Telefonul se încălzește excesiv; rezolvați problema</string>
     <string name="reach_daily_limit_value_body">Reduceți utilizarea datelor mobile.</string>
     <string name="reach_daily_limit_value_title">Limita de date zilnică a fost atinsă</string>
     <string name="recently_reject_message">Instalarea %1$s și a altor %2$d aplicații a fost respinsă</string>
@@ -1279,6 +1285,7 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="sp_toast_removed_from_sign_white_list">Eliminat din lista excepțiilor. Va fi scanat data viitoare.</string>
     <string name="spinner_title">%1$s - Date mobile: %2$s</string>
     <string name="sponsored">Sponsorizat</string>
+    <string name="sponsored_sec_fb">Sponsorizat</string>
     <string name="st_title_mode_choose_group">Selectați un profil</string>
     <string name="start_diagnostic_botton">Start</string>
     <string name="start_downloading_app">A început descărcarea: %1$s</string>
@@ -1599,8 +1606,14 @@ Datele rămase includ datele reportate din luna anterioară."</string>
     <string name="usbsharenet_exception_title">Testare internet partajat prin USB</string>
     <string name="usbsharenet_pc_exception_summary">Nu se poate conecta la internet utilizând conexiunea USB partajată. Verificați conexiunea la internet a computerului.</string>
     <string name="use_immediately">Utilizați</string>
+    <string name="virus_already_update">Definițiile virușilor sunt actualizate</string>
+    <string name="virus_dp_update_title">Actalizarea definițiilor</string>
     <string name="virus_scan">Scanare pentru viruși</string>
     <string name="virus_scan_process_pre">%</string>
+    <string name="virus_update_fail">"Nu s-a putut actualiza"</string>
+    <string name="virus_update_success">Actualizat cu succes</string>
+    <string name="virus_update_tips_title">Conectați-vă la Wi-Fi</string>
+    <string name="virus_wait_network_dialog_message">Pachetele de actualizare sunt mari. Conectați-vă la Wi-Fi pentru a le descărca</string>
     <string name="voltage_symbol">V</string>
     <string name="wakepath_confirm_start_activity">Permiteți %1$s să deschidă %2$s?</string>
     <string name="warning_open_mi_sim">Activați Mi SIM</string>
