--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -993,7 +993,7 @@ Din moment ce utilizarea datelor este măsurată de către telefonul dvs., iar o
     <string name="debug_layout_summary">Afişaţi limitele clipului, marginile, etc.</string>
     <string name="debug_monitoring_category">Monitorizare</string>
     <string name="debug_view_attributes">Activați vizualizarea atributelor</string>
-    <string name="defalut_launcher_title">Lansator implicit</string>
+    <string name="defalut_launcher_title">Lansatorul de sistem implicit</string>
     <string name="default_date_format">dd/MM/yyyy</string>
     <string name="default_input_method">Selectaţi tastatura prestabilită</string>
     <string name="default_sound">Sunet prestabilit</string>
@@ -1210,7 +1210,7 @@ Din moment ce utilizarea datelor este măsurată de către telefonul dvs., iar o
     <string name="enable_service_password_reason">Deoarece activarea %1$s afectează criptarea datelor, va trebui să vă confirmați parola.</string>
     <string name="enable_service_pattern_reason">Deoarece activarea %1$s afectează criptarea datelor, va trebui să vă confirmați modelul de deblocare.</string>
     <string name="enable_service_pin_reason">Deoarece activarea %1$s afectează criptarea datelor, va trebui să vă confirmați codul PIN.</string>
-    <string name="enable_service_title">Serviciul va realiza următoarele acțiuni:</string>
+    <string name="enable_service_title">Utilizați %1$s?</string>
     <string name="enable_snapshot_screenlock">Apăsați lung butonul Înapoi pentru a realiza o fotografie</string>
     <string name="enable_terminal_summary">Activați aplicația terminal care oferă acces la shell local</string>
     <string name="enable_terminal_title">Aplicație terminal locală</string>
@@ -1587,8 +1587,8 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="last_synced">Ultima sincronizare %1$s</string>
     <string name="last_time_used_label">Utilizat ultima dată</string>
     <string name="lattice_smartcover_title">Husă perforată pentru ecran</string>
-    <string name="launcher_auto_fill_empty_title">Completare automată a celulelor goale</string>
-    <string name="launcher_title">Lansator de sistem</string>
+    <string name="launcher_auto_fill_empty_title">Completarea celulelor goale</string>
+    <string name="launcher_title">Ecran principal</string>
     <string name="launching_cit">Lansare CIT</string>
     <string name="launching_pho">Lansare info telefon, aşteptaţi.</string>
     <string name="launching_rep">Raportare…</string>
@@ -1685,7 +1685,7 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="lock_after_timeout">Blocare automată</string>
     <string name="lock_after_timeout_summary">%1$s după inactivitate</string>
     <string name="lock_after_timeout_summary_with_exception">%1$s după inactivitate, exceptând cazul când este menținut activ de %2$s</string>
-    <string name="lock_screen_cells_title">Blocare Celule Ecran</string>
+    <string name="lock_screen_cells_title">Blocare dispunere Ecran principal</string>
     <string name="lock_screen_notifications_interstitial_message">Cum doriți să fie afișate notificările atunci când dispozitivul este blocat?</string>
     <string name="lock_screen_notifications_summary_disable">"Nu afișa notificările"</string>
     <string name="lock_screen_notifications_summary_hide">Ascunde notificările cu conținut sensibil</string>
@@ -1900,7 +1900,7 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
     <string name="memory_size">Spaţiu total</string>
     <string name="memory_title">Disponibil %1$s\t\tTotal %2$s</string>
     <string name="menu_cancel">Renunţaţi</string>
-    <string name="menu_check">Verificați</string>
+    <string name="menu_check">Experimentați</string>
     <string name="menu_delete">Ştergeţi APN</string>
     <string name="menu_duration_12h">12 ore</string>
     <string name="menu_duration_1d">1 zi</string>
@@ -1932,8 +1932,9 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
     <string name="miui_allow_vibrate">Vibrații</string>
     <string name="miui_data_usage_menu_metered">Hotspot-uri mobile</string>
     <string name="miui_disturb_title">Nu deranjați</string>
+    <string name="miui_enable_service_title">Serviciul va performa următoarele acțiuni:</string>
     <string name="miui_experience_optimization">Activați optimizarea MIUI</string>
-    <string name="miui_screen_config_title">Configurare ecran Lansator MIUI</string>
+    <string name="miui_screen_config_title">Setări Ecran principal</string>
     <string name="miui_silent_title">Mod Silențios</string>
     <string name="mms_breathing_light_color_title">Mesaje</string>
     <string name="mms_breathing_light_freq_title">Frecvenţă pulsare indicator luminos intermitent pentru mesaje</string>
@@ -2518,13 +2519,20 @@ Selectaţi sistemul de operare de mai jos:"</string>
     <string name="privacy_mode_enable_title">Modul Vizitator</string>
     <string name="privacy_notes">Notițe</string>
     <string name="privacy_password">Parola de protejare a confidențialității</string>
+    <string name="privacy_password_bind_account">Adăugați contul Mi</string>
+    <string name="privacy_password_bind_account_immediate">Adăugați</string>
     <string name="privacy_password_confirm_SecondSpace_Password">Confirmați parola pentru Spațiul Secundar</string>
     <string name="privacy_password_confirm_use_finger">Deblocați utilizând amprenta</string>
+    <string name="privacy_password_enter_privacy">Introduceți parola de protejare a confidențialității</string>
     <string name="privacy_password_fingerprint_confirm_failed">"Nu s-a putut verifica amprenta"</string>
     <string name="privacy_password_fingerprint_confirm_succes">Amprentă verificată</string>
     <string name="privacy_password_fingerprint_dialog_error_title">"Nu s-a putut scana amprenta; încercați din nou"</string>
     <string name="privacy_password_fingerprint_dialog_message">Plasați degetul pe senzor</string>
     <string name="privacy_password_fingerprint_dialog_title">Scanați amprenta</string>
+    <string name="privacy_password_never_remind">"Nu întreba din nou"</string>
+    <string name="privacy_password_remind_bind_notlogin_account">Adăugați contul Mi pentru a vă putea reseta parola în caz că o veți uita.</string>
+    <string name="privacy_password_remind_bindaccont_message">Adăugați contul Mi (%s) pentru a vă putea reseta parola în caz că o veți uita.</string>
+    <string name="privacy_password_remind_bindaccount_title">Adăugați contul Mi</string>
     <string name="privacy_password_settings">Utilizați parola de protejare a confidențialității</string>
     <string name="privacy_password_settings_titles">Parola de protejare a confidențialității vă protejează mesajele, fotografiile, notițele și fișierele.</string>
     <string name="privacy_password_title">Parola de protejare a confidențialității</string>
@@ -2690,6 +2698,11 @@ Selectaţi sistemul de operare de mai jos:"</string>
  Nu veţi pierde nimic din datele aplicaţiilor."</string>
     <string name="reset_app_preferences_title">Resetaţi preferințele aplicațiilor?</string>
     <string name="reset_legacy_password_settings_preface_text">Trebuie să resetaţi parola de blocare a ecranului.</string>
+    <string name="reset_second_space_passwd">Resetați parola pentru Spațiul Secundar</string>
+    <string name="reset_second_space_passwd_cancel">Renunțați</string>
+    <string name="reset_second_space_passwd_confirm">Continuați</string>
+    <string name="reset_second_space_passwd_detail">Introduceți parola contului Mi utilizată în Spațiul Principal</string>
+    <string name="resetting_second_space_passwd">Resetarea parolei Spațiului Secundar</string>
     <string name="resolver_settings_label">Aranjați</string>
     <string name="resource_ringtone_volume_mute">Sonerie oprită</string>
     <string name="restore_default_apn">Se restabilesc setările APN prestabilite.</string>
@@ -2753,7 +2766,7 @@ Această setare afectează toţi utilizatorii acestui telefon."</string>
     <string name="screen">Ecran</string>
     <string name="screen_button">Butoane ecran</string>
     <string name="screen_button_tips">Glisați în jos pentru a ascunde butoanele de pe ecran</string>
-    <string name="screen_cells_config_title">Configurare Celule Ecran</string>
+    <string name="screen_cells_config_title">Dispunerea Ecranului principal</string>
     <string name="screen_color_and_optimize">Culori şi contrast</string>
     <string name="screen_color_and_optimize_disabled">"Nu se poate ajusta temperatura de culoare în modul Citire"</string>
     <string name="screen_color_temperature">Temperatură</string>
@@ -3281,7 +3294,7 @@ Acest lucru este posibil datorită unui certificat de încredere instalat pe dis
     <string name="status_bar_app_enable_floating">Notificări plutitoare</string>
     <string name="status_bar_app_enable_keyguard">Blocarea ecranului</string>
     <string name="status_bar_app_enable_message">Insigne pictograme</string>
-    <string name="status_bar_key_position_custom">Modificați poziția butoanelor</string>
+    <string name="status_bar_key_position_custom">Modificați pozițiile butoanelor</string>
     <string name="status_bar_screen_button_key">Butoane virtuale</string>
     <string name="status_bar_screen_key_back">Butonul Înapoi</string>
     <string name="status_bar_screen_key_home">Butonul Acasă</string>
@@ -3706,7 +3719,7 @@ Oricare utilizator poate accepta permisiunile aplicaţiilor actualizate în nume
     <string name="user_dict_settings_context_menu_edit_title">Modificaţi</string>
     <string name="user_dict_settings_edit_dialog_title">Modificaţi cuvântul</string>
     <string name="user_dict_settings_empty_text">"Nu există niciun dicţionar.
-Adăugaţi un cuvânt atingând butonul Adăugaţi (+)."</string>
+Atingeți butonul (+) pentru a adăuga cuvinte."</string>
     <string name="user_dict_settings_more_languages">Mai multe limbi…</string>
     <string name="user_dict_settings_summary" />
     <string name="user_dict_settings_title">Dicționar personal</string>
